Fix form page banner on mobile screen

--- a/style.css
+++ b/style.css
@@ -159,7 +159,6 @@ body {
   position: relative;
   width: 100%;
   height: 100vh;
-
   background-image: url("images/hero.jpeg");
   background-repeat: no-repeat;
   background-size: cover;
@@ -699,7 +698,15 @@ body {
   background-color: rgba(0, 0, 0, 0.3);
   z-index: 2;
 }
-
+/* MEDIA QUERY */
+@media (max-width: 768px) {
+  .page-hero {
+    height: auto;
+    aspect-ratio: 9 / 5;
+    background-size: contain;
+    background-position: center top;
+  }
+}
 /* FORM SECTION  */
 #contact {
   background-color: var(--light-grey);
